--- a/Oceanation-main/Oceanation-main/login_handle/css/output.css
+++ b/Oceanation-main/Oceanation-main/login_handle/css/output.css
@@ -899,6 +899,15 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-cyan-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 94 117 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 63 18 / var(--tw-bg-opacity));
+}
 .bg-slate-200{
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
@@ -1099,7 +1108,7 @@ video {
 font-style: normal;
 }
 .hover-change:hover {
-  color: #2b2677; /* Change to gold color on hover */
+  color: #eef611; /* Change to gold color on hover */
   text-decoration: underline; /* Underline the text on hover */
 }
 .font-bold{
