--- a/Oceanation-main/Oceanation-main/login_handle/css/output.css
+++ b/Oceanation-main/Oceanation-main/login_handle/css/output.css
@@ -586,7 +586,7 @@ video {
 }
 
 .ml-4{
-  margin-left: 1rem;
+  margin-left: 4rem;
 }
 
 .mr-2{
@@ -719,12 +719,16 @@ video {
 .min-h-fit {
   min-height: fit-content;
 }
+
 .w-1\/2{
   width: 50%;
 }
 
 .w-1\/4{
   width: 25%;
+}
+.w-2\/5{
+  width: 250px;
 }
 
 .w-3\/4{
@@ -913,6 +917,10 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
+.bg-zinc-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 161 170 / var(--tw-bg-opacity));
+}
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
