--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -712,6 +712,237 @@ video {
 .mr-4{
   margin-right: 1rem;
 }
+.ml-2 {
+  margin-left: 0.5rem; /* Thay thế giá trị 0.5rem bằng giá trị cụ thể bạn muốn */
+}
+
+.mt-2 {
+  margin-top: 0.5rem; /* Thay thế giá trị 0.5rem bằng giá trị cụ thể bạn muốn */
+}
+
+.mr-2 {
+  margin-right: 0.5rem; /* Thay thế giá trị 0.5rem bằng giá trị cụ thể bạn muốn */
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem; /* Thay thế giá trị 0.5rem bằng giá trị cụ thể bạn muốn */
+}
+
+.ms-2 {
+  margin-inline-start: 0.5rem; /* Thay thế giá trị 0.5rem bằng giá trị cụ thể bạn muốn */
+}
+
+.me-2 {
+  margin-inline-end: 0.5rem; /* Thay thế giá trị 0.5rem bằng giá trị cụ thể bạn muốn */
+}
+
+/* Lớp margin với giá trị 0.5rem */
+
+.ml-8 {
+  margin-left: 2rem; /* 32px */
+}
+
+.mt-8 {
+  margin-top: 2rem; /* 32px */
+}
+
+.mr-8 {
+  margin-right: 2rem; /* 32px */
+}
+
+.mb-8 {
+  margin-bottom: 2rem; /* 32px */
+}
+
+.ms-8 {
+  margin-inline-start: 2rem; /* 32px */
+}
+
+.me-8 {
+  margin-inline-end: 2rem; /* 32px */
+}
+
+/* Lớp margin với giá trị 0.75rem */
+
+.ml-9 {
+  margin-left: 2.25rem; /* 36px */
+}
+
+.mt-9 {
+  margin-top: 2.25rem; /* 36px */
+}
+
+.mr-9 {
+  margin-right: 2.25rem; /* 36px */
+}
+
+.mb-9 {
+  margin-bottom: 2.25rem; /* 36px */
+}
+
+.ms-9 {
+  margin-inline-start: 2.25rem; /* 36px */
+}
+
+.me-9 {
+  margin-inline-end: 2.25rem; /* 36px */
+}
+
+/* Lớp margin với giá trị 1rem */
+
+.ml-10 {
+  margin-left: 2.5rem; /* 40px */
+}
+
+.mt-10 {
+  margin-top: 2.5rem; /* 40px */
+}
+
+.mr-10 {
+  margin-right: 2.5rem; /* 40px */
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem; /* 40px */
+}
+
+.ms-10 {
+  margin-inline-start: 2.5rem; /* 40px */
+}
+
+.me-10 {
+  margin-inline-end: 2.5rem; /* 40px */
+}
+
+/* Lớp margin với giá trị 1.25rem */
+
+.ml-11 {
+  margin-left: 2.75rem; /* 44px */
+}
+
+.mt-11 {
+  margin-top: 2.75rem; /* 44px */
+}
+
+.mr-11 {
+  margin-right: 2.75rem; /* 44px */
+}
+
+.mb-11 {
+  margin-bottom: 2.75rem; /* 44px */
+}
+
+.ms-11 {
+  margin-inline-start: 2.75rem; /* 44px */
+}
+
+.me-11 {
+  margin-inline-end: 2.75rem; /* 44px */
+}
+
+/* Lớp margin với giá trị 1.5rem */
+
+.ml-12 {
+  margin-left: 3rem; /* 48px */
+}
+
+.mt-12 {
+  margin-top: 3rem; /* 48px */
+}
+
+.mr-12 {
+  margin-right: 3rem; /* 48px */
+}
+
+.mb-12 {
+  margin-bottom: 3rem; /* 48px */
+}
+
+.ms-12 {
+  margin-inline-start: 3rem; /* 48px */
+}
+
+.me-12 {
+  margin-inline-end: 3rem; /* 48px */
+}
+
+/* Lớp margin với giá trị 1.75rem */
+
+.ml-14 {
+  margin-left: 3.5rem; /* 56px */
+}
+
+.mt-14 {
+  margin-top: 3.5rem; /* 56px */
+}
+
+.mr-14 {
+  margin-right: 3.5rem; /* 56px */
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem; /* 56px */
+}
+
+.ms-14 {
+  margin-inline-start: 3.5rem; /* 56px */
+}
+
+.me-14 {
+  margin-inline-end: 3.5rem; /* 56px */
+}
+
+/* Lớp margin với giá trị 2rem */
+
+.ml-16 {
+  margin-left: 4rem; /* 64px */
+}
+
+.mt-16 {
+  margin-top: 4rem; /* 64px */
+}
+
+.mr-16 {
+  margin-right: 4rem; /* 64px */
+}
+
+.mb-16 {
+  margin-bottom: 4rem; /* 64px */
+}
+
+.ms-16 {
+  margin-inline-start: 4rem; /* 64px */
+}
+
+.me-16 {
+  margin-inline-end: 4rem; /* 64px */
+}
+
+/* Lớp margin với giá trị 2.5rem */
+
+.ml-20 {
+  margin-left: 7rem; /* 80px */
+}
+
+.mt-20 {
+  margin-top: 5rem; /* 80px */
+}
+
+.mr-20 {
+  margin-right: 18rem; /* 80px */
+}
+
+.mb-20 {
+  margin-bottom: 5rem; /* 80px */
+}
+
+.ms-20 {
+  margin-inline-start: 5rem; /* 80px */
+}
+
+.me-20 {
+  margin-inline-end: 5rem; /* 80px */
+}
 
 .block{
   display: block;
